2014-12-12
	- Makefile.rules für gcc 4.8.3 angepasst (-std=c++1y statt -std=c++14)
	- std::make_unique von der gcc-Implementierung kopiert

2014-12-11
	- Bei der Tiefensuche wird die Tiefe so lange erhöht, bis das Zeitlimit erreicht ist
	- Multithreadunterstützung

2014-12-06
	- Tiefensuche erweitert

2014-12-05
	- Tiefensuche mit einfacher Bewertung
	- Tiefensuche für Endspiel

2014-12-02
	- Erreichbare Raumgröße wird ermittelt (enthält noch ein paar Ungenauigkeiten/Vereinfachungen)

2014-12-01
	- Aus der UI kann mit <r> das Spielfeld ausgegeben werden (für Testzwecke)
	- Fehlerkorrektur bei der Tiefensuche
	- Tiefensuche geht nur 3 Schritte weit

2014-11-27
	- Raster ist wahlweise vector<bool> oder bitset

2014-11-24
	- Fehler beim Beenden des Programms im Spiel korrigiert

2014-11-23
	- Taktik „zum größten Einflussgebiet“ hinzugefügt

2014-11-22
	- UI: Spielraster + Informationen werden dargestellt
	- UI: Sprung in die Historie ist möglich

2014-11-21
	- UI: Spielraster wird dargestellt

2014-11-20
	- UI weiter aufgeteilt (Text und Gtkmm)

2014-11-18
	- Mit UI begonnen

2014-11-13
	- Tiefensuche implementiert, einfache Bewertung

2014-11-11
	- Wechsel in Endspiel eingebaut (Strategie „Taktiken mit Endspiel“)
	- Taktik „Tiefensuche“ begonnen

2014-11-10
	- Feld in Raster umbenannt (analog Spielfeld in Spielraster)

2014-11-09
	- Taktik Tiefensuche für Raum ausfüllen erweitert

2014-11-08
	- Das Spiel kann auch ohne externen Server laufen
	- neue Taktik: Tiefensuche für Raum ausfüllen

2014-11-01
	- Feld um einige Informationsfunktionen erweitert
	- Taktik GroessterRaum erstellt

2014-10-31
	- neue Taktik „Raum ausfüllen“
	- Ein paar Hilfsfunktionen für Feld erstellt

2014-10-30
	- new durch unique_ptr ersetzt. Erfordert C++14

2014-10-29
	- Feld von vector<vector<bool>> auf vector<bool> umgeändert
	- Taktik „Zufall“ implementiert
	- Spielfelde 50x50 und Labyrinth hinzugefügt

2014-10-27
	- Der Weg der Bots wird gespeichert und bunt ausgegeben

2014-10-26