@@ -17,8 +17,9 @@ BOTA="../src/tronbot"
 #BOTB="../src/tronbot"
 BOTB="bots/dummybot/bot"
 
+SPIELRASTER="Test.txt"
 #SPIELRASTER="../Spielraster/Test.txt"
-SPIELRASTER="../Spielraster/simple.txt"
+#SPIELRASTER="../Spielraster/simple.txt"
 #SPIELRASTER="../Spielraster/200x200.txt"
 #SPIELRASTER="../Spielraster/100x100.txt"
 #SPIELRASTER="../Spielraster/50x50.txt"
